# klare

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
compiler/: CMakeLists.txt
compiler/analysis/: CMakeLists.txt
compiler/analysis/include/: ast.h
compiler/analysis/src/: ast.cpp
compiler/ast/: CMakeLists.txt
compiler/ast/include/: ast.h
compiler/interfaces/: CMakeLists.txt
compiler/interfaces/include/: tokens.h
compiler/lexer/: CMakeLists.txt
compiler/lexer/include/: lexer.h
compiler/lexer/src/: lexer.cpp
compiler/parser/: CMakeLists.txt
compiler/parser/include/: parser.h  symbol.h
compiler/parser/src/: parser.cpp
tests/: CMakeLists.txt
tests/parse/unit/: var_decl.cpp
tests/parsing/unit/: arr_decl.cpp  bin_expr.cpp  call_expr.cpp  const_decl.cpp  decl.cpp  ptr_decl.cpp  una_expr.cpp  var_decl.cpp
tests/tokenize/: basic.cpp  test.cpp
tests/tokenize/integration/: classes.cpp  complex.cpp  control_flows.cpp  function_decl.cpp  var_decl.cpp
tests/tokenize/unit/: annotations.cpp  classes.cpp  comments.cpp  control_flows.cpp  delimiters.cpp  eof.cpp  identifiers.cpp  keywords.cpp  multi_ops.cpp  num_literals.cpp  single_ops.cpp  str_literals.cpp
